tests/NormalTests/paczka1/fuzzy1/16603566.err
Error in line 19: JKzoghSs4Nz S705 298,84
Error in line 27: nTHti4uD S574 95,8
Error in line 29: oN3AR S705 18,5
Error in line 31: nTHti4uD S705 0,5
Error in line 18: JKzoghSs4Nz S705 77,7
Error in line 33: oN3AR A272 69,5
